<?xml version="1.0"?>
<package format="2">
  <name>tuw_dynamixel_demo</name>
  <version>0.0.0</version>
  <description>Example to showcase the usage of dynamixel servos with ROS.</description>

  <maintainer email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</maintainer>

  <license>BSD</license>

  <author email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>geometry_msgs_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>dynamixel_workbench_controllers</exec_depend>

  <test_depend>rosunit</test_depend>

  <export>
    <!--nothing to export -->
  </export>

</package>
