<?xml version="1.0"?>
<package format="2">
  <name>tuw_dynamixel_iwos_controller</name>
  <version>0.0.0</version>
  <description>Controller for IWOS robot dynamixel joints (MX106)</description>

  <maintainer email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</maintainer>

  <license>BSD</license>

  <author email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslint</build_depend>

  <exec_depend>rostopic</exec_depend>
  <exec_depend>tuw_nav_msgs</exec_depend>

  <export>
    <!--nothing to export -->
  </export>

</package>
